Добавляет стилизацию главной страницы

--- a/index.html
+++ b/index.html
@@ -114,13 +114,21 @@
         <!--Карта-->
 
         <div class="contacts">
-          <p class="contacts-heading">NЁRDS DESIGN STUDIO</p>
+          <p class="contacts-heading">Nёrds design studio</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p>тел.<a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
           <a class="button" href="#">Напишите нам</a>
         </div>
 
-        <!--Напишите нам-->
+        <div class="response-popup">
+          <p class="response-heading">Напишите нам</p>
+          <form class="response-form" action="https://echo.htmlacademy.ru/" method="get">
+            <p><label>Ваше имя: <input type="text" name="response-username" placeholder="Имя фамилия"></label></p>
+            <p><label>Ваш email: <input type="email" name="response-email" placeholder="email@example.com"></label></p>
+            <p><label>Текст письма: <input type="text" name="response-text" placeholder="В свободной форме"></label></p>
+            <p><input class="button button-response" type="submit"></p>
+          </form>
+        </div>
 
         <footer class="page-footer">
           <ul class="social-links-list">
