Вносит правки в стилизацию главной страницы; Вносит правки в лого проектов; Добавляет стилизацию каталога v.1.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
           <li><a href="#">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
-          <li><a href="#">Корзина</a></li>
         </ul>
+        <div class="cart">
+          <a href="#">Корзина</a>
+        </div>
       </nav>
 
       <!-- <section class="slider">
@@ -120,27 +122,29 @@
           <a class="button" href="#">Напишите нам</a>
         </div>
 
-        <div class="response-popup">
-          <p class="response-heading">Напишите нам</p>
-          <form class="response-form" action="https://echo.htmlacademy.ru/" method="get">
-            <p><label>Ваше имя: <input type="text" name="response-username" placeholder="Имя фамилия"></label></p>
-            <p><label>Ваш email: <input type="email" name="response-email" placeholder="email@example.com"></label></p>
-            <p><label>Текст письма: <input type="text" name="response-text" placeholder="В свободной форме"></label></p>
-            <p><input class="button button-response" type="submit"></p>
-          </form>
-        </div>
-
-        <footer class="page-footer">
-          <ul class="social-links-list">
-            <li class="social-links-button"><a href="#"><img src="img/icons/icon-vk.svg" alt="Вконтакте"></a></li>
-            <li class="social-links-button"><a href="#"><img src="img/icons/icon-fb.svg" alt="Фейсбук"></a></li>
-            <li class="social-links-button"><a href="#"><img src="img/icons/icon-insta.svg" alt="Инстаграм"></a></li>
-          </ul>
-          <div class="footer-discount">
-            <p class="footer-discount-heading">Давайте дружить, это выгодно!</p>
-            <p>Скидка 10% для друзей из социальных сетей.</p>
-          </div>
-          </footer>
     </main>
+
+      <footer class="page-footer">
+        <ul class="social-links-list">
+          <li class="social-links-button"><a href="#"><img src="img/icons/icon-vk.svg" alt="Вконтакте"></a></li>
+          <li class="social-links-button"><a href="#"><img src="img/icons/icon-fb.svg" alt="Фейсбук"></a></li>
+          <li class="social-links-button"><a href="#"><img src="img/icons/icon-insta.svg" alt="Инстаграм"></a></li>
+        </ul>
+        <div class="footer-discount">
+          <p class="footer-discount-heading">Давайте дружить, это выгодно!</p>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </div>
+      </footer>
+
+      <div class="response-popup">
+        <p class="response-heading">Напишите нам</p>
+        <form class="response-form" action="https://echo.htmlacademy.ru/" method="get">
+          <p><label>Ваше имя: <input type="text" name="response-username" placeholder="Имя фамилия"></label></p>
+          <p><label>Ваш email: <input type="email" name="response-email" placeholder="email@example.com"></label></p>
+          <p><label>Текст письма: <input type="text" name="response-text" placeholder="В свободной форме"></label></p>
+          <p><input class="button button-response" type="submit"></p>
+        </form>
+      </div>
+
   </body>
 </html>
