Добавляет стилизацию каталога v.3

--- a/catalog.html
+++ b/catalog.html
@@ -104,62 +104,77 @@
                 <li class="filter-sort-option"><a href="#">По убыванию</a></li>
               </ul>
             </div>
-              <ul>
-                <li>
+
+            <div class="catalog">
+              <ul class="catalog-list">
+                <li class="catalog-item">
                   <div>
-                    <a href="#"><h3>Туристический городок Седона</h3></a>
-                    <img src="img/catalog/catalog-sedona-1.jpg" alt="превью Седона" width="358" height="577">
-                    <div>
-                      <p>Информационный сайт для туристов</p>
-                      <a href="#">9 900 &#8381;</a>
+                    <a href="#"><h3>Туристический городок Седона</h3>
+                    <img src="img/catalog/catalog-sedona-1.jpg" alt="превью Седона" width="358" height="577"></a>
+                    <div class="catalog-item-popup">
+                      <p class="catalog-item-popup-heading">Sedona</p>
+                      <p class="catalog-item-popup-descripton">Информационный сайт для туристов</p>
+                      <a class="button" href="#">9 900 &#8381;</a>
+
                     </div>
                   </div>
                 </li>
-                <li>
+                <li class="catalog-item">
                   <div>
-                    <a href="#"><h3>Барбершоп Бородинский</h3></a>
-                    <img src="img/catalog/catalog-barbershop-1.jpg" alt="превью Бородинский" width="358" height="578">
+                    <a href="#">
+                      <h3>Барбершоп Бородинский</h3>
+                      <img src="img/catalog/catalog-barbershop-1.jpg" alt="превью Бородинский" width="358" height="578">
+                    </a>
                   </div>
                 </li>
-                <li>
+                <li class="catalog-item">
                   <div>
-                    <a href="#"><h3>Курсы А Плюс</h3></a>
-                    <img src="img/catalog/catalog-aplus-1.jpg" alt="превью А Плюс" width="358" height="578">
+                    <a href="#">
+                      <h3>Курсы А Плюс</h3>
+                      <img src="img/catalog/catalog-aplus-1.jpg" alt="превью А Плюс" width="358" height="578">
+                    </a>
                   </div>
                 </li>
-                <li>
+                <li class="catalog-item">
                   <div>
-                    <a href="#"><h3>Приложение Пинк</h3></a>
-                    <img src="img/catalog/catalog-pink-1.jpg" alt="превью Пинк" width="358" height="578">
+                    <a href="#">
+                      <h3>Приложение Пинк</h3>
+                      <img src="img/catalog/catalog-pink-1.jpg" alt="превью Пинк" width="358" height="578">
+                    </a>
                   </div>
                 </li>
-                <li>
+                <li class="catalog-item">
                   <div>
-                    <a href="#"><h3>Вязаные штуки Мишка</h3></a>
-                    <img src="img/catalog/catalog-mishka-1.jpg" alt="превью Мишка" width="358" height="578">
+                    <a href="#">
+                      <h3>Вязаные штуки Мишка</h3>
+                      <img src="img/catalog/catalog-mishka-1.jpg" alt="превью Мишка" width="358" height="578">
+                    </a>
                   </div>
                 </li>
-                <li>
+                <li class="catalog-item">
                   <div>
-                    <a href="#"><h3>Крафтовый квас Кваст</h3></a>
-                    <img src="img/catalog/catalog-kvast-1.jpg" alt="превью Кваст" width="358" height="578">
+                    <a href="#">
+                      <h3>Крафтовый квас Кваст</h3>
+                      <img src="img/catalog/catalog-kvast-1.jpg" alt="превью Кваст" width="358" height="578">
+                    </a>
                   </div>
                 </li>
               </ul>
-              <ul>
-                <li>
+              <ul class="catalog-pages">
+                <li class="catalog-pages-item">
                   <a>1</a>
                 </li>
-                <li>
+                <li class="catalog-pages-item">
                   <a href="#">2</a>
                 </li>
-                <li>
+                <li class="catalog-pages-item">
                   <a href="#">3</a>
                 </li>
-                <li>
+                <li class="catalog-pages-item">
                   <a href="#">Следующая</a>
                 </li>
               </ul>
+            </div>
         </section>
 
         <!--Карта-->
