--- a/catalog.html
+++ b/catalog.html
@@ -160,17 +160,17 @@
                   </div>
                 </li>
               </ul>
-              <ul class="catalog-pages">
-                <li class="catalog-pages-item">
+              <ul class="pagination-list">
+                <li class="pagination-item pagination-item-current">
                   <a>1</a>
                 </li>
-                <li class="catalog-pages-item">
+                <li class="pagination-item">
                   <a href="#">2</a>
                 </li>
-                <li class="catalog-pages-item">
+                <li class="pagination-item">
                   <a href="#">3</a>
                 </li>
-                <li class="catalog-pages-item">
+                <li class="pagination-item">
                   <a href="#">Следующая</a>
                 </li>
               </ul>
