--- a/index.html
+++ b/index.html
@@ -14,30 +14,32 @@
 
   <body class="page-body">
 
+    <div class="header-bar">
     <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo" href="#"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
-        <ul class="site-navigation">
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-        <div class="cart">
-          <a href="#">Корзина</a>
+      <nav class="main-nav">
+        <div class="main-navigation-wrapper">
+          <a class="main-header-logo" href="#"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
+          <ul class="site-nav">
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Студия</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Клиенты</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="catalog.html">Магазин</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Контакты</a></li>
+          </ul>
+          <div class="cart">
+            <a class="cart-link" href="#">Корзина</a>
+          </div>
+          <!-- <section class="slider">
+            <h2>Слайдер дизайн-студии «Nerds»</h2>
+              <div class="slider-wrapper">
+                <div class="slider-item">
+
+                </div>
+              </div>
+          </section> -->
         </div>
       </nav>
-
-      <!-- <section class="slider">
-        <h2>Слайдер дизайн-студии «Nerds»</h2>
-          <div class="slider-wrapper">
-            <div class="slider-item">
-
-            </div>
-          </div>
-      </section> -->
     </header>
-
+    </div>
     <main class="container">
       <h1>Сайт дизайн-студии «Nerds»</h1>
         <section class="services-heading">
@@ -53,24 +55,25 @@
             <li class="services-item">
               <img src="img/index-websites.jpg" alt="Веб-сайты" width="300" height="146">
               <h2>Веб-сайты</h2>
-              <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
               <a class="button" href="#">Заказать</a>
             </li>
             <li class="services-item">
               <img src="img/index-apps.jpg" alt="Приложения" width="300" height="146">
               <h2>Приложения</h2>
-              <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+              <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
               <a class="button button-green"  href="#">Заказать</a>
             </li>
             <li class="services-item">
               <img src="img/index-presentations.jpg" alt="Презентации" width="300" height="146">
               <h2>Презентации</h2>
-              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+              <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
               <a class="button button-yellow" href="#">Заказать</a>
             </li>
           </ul>
         </section>
 
+      <div class="about-stats-company">
         <section class="about-company">
           <h2>Информация о компании</h2>
           <p class="secondary-slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
@@ -102,6 +105,7 @@
             </tr>
           </table>
         </section>
+      </div>
 
         <section class="products-company">
           <h2>Проекты компании</h2>
@@ -125,14 +129,16 @@
     </main>
 
       <footer class="page-footer">
-        <ul class="social-links-list">
-          <li class="social-links-button"><a href="#"><img src="img/icons/icon-vk.svg" alt="Вконтакте"></a></li>
-          <li class="social-links-button"><a href="#"><img src="img/icons/icon-fb.svg" alt="Фейсбук"></a></li>
-          <li class="social-links-button"><a href="#"><img src="img/icons/icon-insta.svg" alt="Инстаграм"></a></li>
-        </ul>
-        <div class="footer-discount">
-          <p class="footer-discount-heading">Давайте дружить, это выгодно!</p>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
+        <div class="container-footer">
+          <ul class="social-links-list">
+            <li class="social-links-item"><a class="social-links-button social-links-button-vk" href="#"></a></li>
+            <li class="social-links-item"><a class="social-links-button social-links-button-fb" href="#"></a></li>
+            <li class="social-links-item"><a class="social-links-button social-links-button-insta" href="#"></a></li>
+          </ul>
+          <div class="footer-discount">
+            <p class="footer-discount-heading">Давайте дружить, это выгодно!</p>
+            <p>Скидка 10% для друзей из социальных сетей.</p>
+          </div>
         </div>
       </footer>
 
