Добавляет гриды для внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -18,11 +18,11 @@
     <header class="main-header">
       <nav class="main-nav">
         <div class="main-navigation-wrapper">
-          <a class="main-header-logo" href="#"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
+          <a class="main-header-logo" href="index.html"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
           <ul class="site-nav">
-            <li class="site-nav-item"><a class="site-nav-link" href="#">Студия</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="index.html">Студия</a></li>
             <li class="site-nav-item"><a class="site-nav-link" href="#">Клиенты</a></li>
-            <li class="site-nav-item"><a class="site-nav-link" href="catalog.html">Магазин</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="#">Магазин</a></li>
             <li class="site-nav-item"><a class="site-nav-link" href="#">Контакты</a></li>
           </ul>
           <div class="cart">
@@ -53,8 +53,8 @@
                   <input type="range" name="worth" value="5000" min="0" max="15000" step="1000">
                 </div>
                 <div class="filter-cost">
-                  <label>От&nbsp;<input type="text" name="min-price" value="0"></label>
-                  <label>До&nbsp;<input type="text" name="max-price" value="15000"></label>
+                  <label>От&nbsp;<input type="text" name="min-price" value="0" width="50px"></label>
+                  <label>До&nbsp;<input type="text" name="max-price" value="15000" width="50px"></label>
                 </div>
             </fieldset>
             <fieldset>
