--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <body class="page-body">
 
-    <div class="header-bar">
     <header class="main-header">
+      <div class="container">
       <nav class="main-nav">
+        <a class="main-header-logo" href="#"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
         <div class="main-navigation-wrapper">
-          <a class="main-header-logo" href="#"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
           <ul class="site-nav">
             <li class="site-nav-item"><a class="site-nav-link" href="#">Студия</a></li>
             <li class="site-nav-item"><a class="site-nav-link" href="#">Клиенты</a></li>
@@ -38,103 +38,112 @@
           </section> -->
         </div>
       </nav>
+      </div>
     </header>
-    </div>
-    <main class="container">
-      <h1>Сайт дизайн-студии «Nerds»</h1>
+
+    <main>
+      <h1 class="visually-hidden">Сайт дизайн-студии «Nerds»</h1>
         <section class="services-heading">
-          <h2>Описание услуг</h2>
+          <h2 class="visually-hidden">Описание услуг</h2>
           <p class="primary-slogan">Долго, дорого, скрупулезно.</p>
           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a class="button" href="#">Узнать больше</a>
+          <a class="button learn-more-button" href="#">Узнать больше</a>
         </section>
 
         <section class="services-descripton">
-          <h2>Список услуг</h2>
-          <ul class="services-list">
-            <li class="services-item">
-              <img src="img/index-websites.jpg" alt="Веб-сайты" width="300" height="146">
-              <h2>Веб-сайты</h2>
-              <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
-              <a class="button" href="#">Заказать</a>
-            </li>
-            <li class="services-item">
-              <img src="img/index-apps.jpg" alt="Приложения" width="300" height="146">
-              <h2>Приложения</h2>
-              <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
-              <a class="button button-green"  href="#">Заказать</a>
-            </li>
-            <li class="services-item">
-              <img src="img/index-presentations.jpg" alt="Презентации" width="300" height="146">
-              <h2>Презентации</h2>
-              <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
-              <a class="button button-yellow" href="#">Заказать</a>
-            </li>
-          </ul>
-        </section>
-
-      <div class="about-stats-company">
-        <section class="about-company">
-          <h2>Информация о компании</h2>
-          <p class="secondary-slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-          <p class="bold-list-heading">Выполняем заказы на разработку:</p>
-            <ul class="about-list">
-              <li class="about-item">Веб-сайтов любой сложности</li>
-              <li class="about-item">Мобильных приложений для iOS и Android</li>
-              <li class="about-item">Слайдшоу и видео для корпоративных презентаций</li>
+          <div class="container">
+            <h2 class="visually-hidden">Список услуг</h2>
+            <ul class="services-list">
+              <li class="services-item">
+                <img src="img/index-websites.jpg" alt="Веб-сайты" width="300" height="146">
+                <h2>Веб-сайты</h2>
+                <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+                <a class="button" href="#">Заказать</a>
+              </li>
+              <li class="services-item">
+                <img src="img/index-apps.jpg" alt="Приложения" width="300" height="146">
+                <h2>Приложения</h2>
+                <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
+                <a class="button button-green"  href="#">Заказать</a>
+              </li>
+              <li class="services-item">
+                <img src="img/index-presentations.jpg" alt="Презентации" width="300" height="146">
+                <h2>Презентации</h2>
+                <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+                <a class="button button-yellow" href="#">Заказать</a>
+              </li>
             </ul>
+          </div>
         </section>
 
-        <section class="stats-company">
-          <h2>Статистика компании</h2>
-          <img src="img/nerds-illustration-1.png" alt="Логотип дизайн-студии «Nerds»" width="360" height="208">
-          <table class="stats-table">
-            <tr class="stats-heading-row">
-              <th class="bold-list-heading" class="stats-heading-item" colspan="3">с 2004 года любим точность во всем:</th>
-            </tr>
-            <tr class="stats-row">
-              <td class="stats-item-descripton">Уровень самоотдачи</td>
-              <td class="stats-item-descripton">Соблюдение сроков</td>
-              <td class="stats-item-descripton">Минимальная предоплата</td>
-            </tr>
-            <tr class="stats-row">
-              <td class="stats-item">146 <span>%</span></td>
-              <td class="stats-item">100 <span>%</span></td>
-              <td class="stats-item">50 <span>%</span></td>
-            </tr>
-          </table>
-        </section>
-      </div>
+      <section class="about-stats-company">
+        <div class="container">
+          <div class="about-company">
+            <h2 class="visually-hidden">Информация о компании</h2>
+            <p class="secondary-slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <p class="bold-list-heading">Выполняем заказы на разработку:</p>
+              <ul class="about-list">
+                <li class="about-item">Веб-сайтов любой сложности</li>
+                <li class="about-item">Мобильных приложений для iOS и Android</li>
+                <li class="about-item">Слайдшоу и видео для корпоративных презентаций</li>
+              </ul>
+          </div>
+
+          <div class="stats-company">
+            <h2 class="visually-hidden">Статистика компании</h2>
+            <img src="img/nerds-illustration-1.png" alt="Логотип дизайн-студии «Nerds»" width="360" height="208">
+            <table class="stats-table">
+              <tr class="stats-heading-row">
+                <th class="bold-list-heading stats-heading-item" colspan="3">с 2004 года любим точность во всем:</th>
+              </tr>
+              <tr class="stats-row">
+                <td class="stats-item">146<span>%</span></td>
+                <td class="stats-item">100<span>%</span></td>
+                <td class="stats-item">50<span>%</span></td>
+              </tr>
+              <tr class="stats-row">
+                <td class="stats-item-descripton">Уровень самоотдачи</td>
+                <td class="stats-item-descripton">Соблюдение сроков</td>
+                <td class="stats-item-descripton">Минимальная предоплата</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </section>
 
         <section class="products-company">
-          <h2>Проекты компании</h2>
-          <ul class="products-list">
-            <li class="products-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-ha.png" alt="HTML Academy" width="199" height="68"></a></li>
-            <li class="products-item"><a href="#"><img src="img/logo-barbershop.png" alt="Барбершоп Бородинский" width="209" height="90"></a></li>
-            <li class="products-item"><a href="#"><img src="img/logo-pink.png" alt="Приложение Пинк" width="185" height="52"></a></li>
-            <li class="products-item"><a href="#"><img src="img/logo-mishka.png" alt="Вязаные штуки Мишка" width="173" height="84"></a></li>
-          </ul>
+          <h2 class="visually-hidden">Проекты компании</h2>
+            <div class="container">
+              <ul class="products-list">
+                <li class="products-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-ha.png" alt="HTML Academy" width="199" height="68"></a></li>
+                <li class="products-item"><a href="#"><img src="img/logo-barbershop.png" alt="Барбершоп Бородинский" width="209" height="90"></a></li>
+                <li class="products-item"><a href="#"><img src="img/logo-pink.png" alt="Приложение Пинк" width="185" height="52"></a></li>
+                <li class="products-item"><a href="#"><img src="img/logo-mishka.png" alt="Вязаные штуки Мишка" width="173" height="84"></a></li>
+              </ul>
+          </div>
         </section>
 
         <!--Карта-->
 
         <div class="contacts">
           <p class="contacts-heading">Nёrds design studio</p>
-          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
           <p>тел.<a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-          <a class="button" href="#">Напишите нам</a>
+          <a class="button contacts-button" href="#">Напишите нам</a>
         </div>
 
     </main>
 
       <footer class="page-footer">
-        <div class="container-footer">
-          <ul class="social-links-list">
-            <li class="social-links-item"><a class="social-links-button social-links-button-vk" href="#"></a></li>
-            <li class="social-links-item"><a class="social-links-button social-links-button-fb" href="#"></a></li>
-            <li class="social-links-item"><a class="social-links-button social-links-button-insta" href="#"></a></li>
-          </ul>
+        <div class="footer-container">
+          <div class="footer-social">
+            <ul class="social-links-list">
+              <li class="social-links-item"><a class="social-links-button social-links-button-vk" href="#"></a></li>
+              <li class="social-links-item"><a class="social-links-button social-links-button-fb" href="#"></a></li>
+              <li class="social-links-item"><a class="social-links-button social-links-button-insta" href="#"></a></li>
+            </ul>
+          </div>
           <div class="footer-discount">
             <p class="footer-discount-heading">Давайте дружить, это выгодно!</p>
             <p>Скидка 10% для друзей из социальных сетей.</p>
