--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&;subset=latin,cyrillic;display=swap">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
@@ -17,12 +18,12 @@
     <header class="main-header main-catalog-header">
       <div class="container">
         <nav class="main-nav">
-          <a class="main-header-logo" href="#"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
+          <a class="main-header-logo" href="index.html"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
           <div class="main-navigation-wrapper">
             <ul class="site-nav">
               <li class="site-nav-item"><a class="site-nav-link" href="#">Студия</a></li>
               <li class="site-nav-item"><a class="site-nav-link" href="#">Клиенты</a></li>
-              <li class="site-nav-item"><a class="site-nav-link" href="catalog.html">Магазин</a></li>
+              <li class="site-nav-item"><a class="site-nav-link" href="#">Магазин</a></li>
               <li class="site-nav-item"><a class="site-nav-link" href="#">Контакты</a></li>
             </ul>
             <div class="cart">
@@ -46,8 +47,8 @@
                     <input type="range" name="worth" value="5000" min="0" max="15000" step="1000">
                   </div>
                   <div class="filter-cost">
-                    <label>От&nbsp;<input type="text" name="min-price" value="0" width="50px"></label>
-                    <label>До&nbsp;<input type="text" name="max-price" value="15000" width="50px"></label>
+                    <label>От&nbsp;<input type="text" name="min-price" value="0"></label>
+                    <label>До&nbsp;<input type="text" name="max-price" value="15000"></label>
                   </div>
               </fieldset>
               <fieldset>
@@ -103,51 +104,102 @@
               <div class="filter-sort">
                 <p class="filter-heading">Сортировать:</p>
                 <ul class="filter-sort-list">
-                  <li class="filter-sort-option"><a href="#">По цене</a></li>
+                  <li class="filter-sort-option"><a class="filter-sort-current" href="#">По цене</a></li>
                   <li class="filter-sort-option"><a href="#">По типу</a></li>
                   <li class="filter-sort-option"><a href="#">По названию</a></li>
                 </ul>
-                <ul>
-                  <li class="filter-sort-option"><a href="#">По возрастанию</a></li>
-                  <li class="filter-sort-option"><a href="#">По убыванию</a></li>
+                <ul class="filter-sort-buttons">
+                  <li class="filter-sort-button">
+                    <button type="button" class="button-down">
+                      <span class="visually-hidden">По убыванию:</span>
+                    </button>
+                  </li>
+                  <li class="filter-sort-button">
+                    <button type="button" class="button-up">
+                      <span class="visually-hidden">По возрастанию:</span>
+                    </button>
+                  </li>
                 </ul>
               </div>
 
               <div class="catalog">
                 <ul class="catalog-list">
                   <li class="catalog-item">
-                    <h3>Туристический городок Седона</h3>
+                    <h3 class="visually-hidden">Туристический городок Седона</h3>
+                      <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
+                      </svg>
                       <img src="img/catalog/catalog-sedona-1.jpg" alt="превью Седона" width="358" height="577">
                       <div class="catalog-item-popup">
                         <h3 class="catalog-item-popup-heading">Sedona</h3>
-                        <p class="catalog-item-popup-descripton">Информационный сайт для туристов</p>
-                        <a class="button" href="#">9 900 &#8381;</a>
+                        <p class="catalog-item-popup-descripton">Информационный сайт<br> для туристов</p>
+                        <span class="cost">9 900 &#8381;</span>
                       </div>
                   </li>
                   <li class="catalog-item">
-                    <h3>Барбершоп Бородинский</h3>
-                    <img src="img/catalog/catalog-barbershop-1.jpg" alt="превью Бородинский" width="358" height="578">
-                  </li>
-                  <li class="catalog-item">
-                    <h3>Курсы А Плюс</h3>
-                    <img src="img/catalog/catalog-aplus-1.jpg" alt="превью А Плюс" width="358" height="578">
-                  </li>
-                  <li class="catalog-item">
-                    <h3>Приложение Пинк</h3>
+                    <h3 class="visually-hidden">Приложение Пинк</h3>
+                    <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
+                    </svg>
                     <img src="img/catalog/catalog-pink-1.jpg" alt="превью Пинк" width="358" height="578">
+                    <div class="catalog-item-popup">
+                      <h3 class="catalog-item-popup-heading">Pink app</h3>
+                      <p class="catalog-item-popup-descripton">Продуктовый лендинг приложения для iOS и Android</p>
+                      <span class="cost">9 900 &#8381;</span>
+                    </div>
                   </li>
                   <li class="catalog-item">
-                    <h3>Вязаные штуки Мишка</h3>
+                    <h3 class="visually-hidden">Барбершоп Бородинский</h3>
+                    <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
+                    </svg>
+                    <img src="img/catalog/catalog-barbershop-1.jpg" alt="превью Бородинский" width="358" height="578">
+                    <div class="catalog-item-popup">
+                      <h3 class="catalog-item-popup-heading">Barbershop</h3>
+                      <p class="catalog-item-popup-descripton">Сайт салона красоты. Для мужчин, да.</p>
+                      <span class="cost">9 900 &#8381;</span>
+                    </div>
+                  </li>
+                  <li class="catalog-item">
+                    <h3 class="visually-hidden">Вязаные штуки Мишка</h3>
+                    <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
+                    </svg>
                     <img src="img/catalog/catalog-mishka-1.jpg" alt="превью Мишка" width="358" height="578">
+                    <div class="catalog-item-popup">
+                      <h3 class="catalog-item-popup-heading">Mishka</h3>
+                      <p class="catalog-item-popup-descripton">Интернет-магазин вязаных игрушек</p>
+                      <span class="cost">9 900 &#8381;</span>
+                    </div>
                   </li>
                   <li class="catalog-item">
-                    <h3>Крафтовый квас Кваст</h3>
+                    <h3 class="visually-hidden">Курсы А Плюс</h3>
+                    <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
+                    </svg>
+                    <img src="img/catalog/catalog-aplus-1.jpg" alt="превью А Плюс" width="358" height="578">
+                    <div class="catalog-item-popup">
+                      <h3 class="catalog-item-popup-heading">A Plus</h3>
+                      <p class="catalog-item-popup-descripton">Лендинг курсов повышения квалификации</p>
+                      <span class="cost">9 900 &#8381;</span>
+                    </div>
+                  </li>
+                  <li class="catalog-item">
+                    <h3 class="visually-hidden">Крафтовый квас Кваст</h3>
+                    <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
+                    </svg>
                     <img src="img/catalog/catalog-kvast-1.jpg" alt="превью Кваст" width="358" height="578">
+                    <div class="catalog-item-popup">
+                      <h3 class="catalog-item-popup-heading">Кваст</h3>
+                      <p class="catalog-item-popup-descripton">Промо-сайт производителя крафтового кваса</p>
+                      <span class="cost">9 900 &#8381;</span>
+                    </div>
                   </li>
                 </ul>
                 <ul class="pagination-list">
-                  <li class="pagination-item pagination-item-current">
-                    <a>1</a>
+                  <li class="pagination-item">
+                    <a class="pagination-item-current">1</a>
                   </li>
                   <li class="pagination-item">
                     <a href="#">2</a>
@@ -163,13 +215,19 @@
             </div>
           </section>
         </div>
-        <!--Карта-->
-        <div class="contacts">
-          <p class="contacts-heading">Nёrds design studio</p>
-          <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел.<a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-          <a class="button contacts-button" href="#">Напишите нам</a>
-        </div>
+
+        <section class="location">
+          <h2 class="visually-hidden">Мы на карте:</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533248!2d30.32085871612592!3d59.93871648187619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2s!4v1616321381280!5m2!1sru!2s" width="1160" height="416" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <div class="container">
+              <div class="contacts">
+                <p class="contacts-heading">Nёrds design studio</p>
+                <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
+                <p>тел.<a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+                <a class="button contacts-button" href="#">Напишите нам</a>
+              </div>
+            </div>
+        </section>
 
     </main>
 
